--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!-- index.html -->
 <html>
+    <head>
+        <link rel="stylesheet" href="styles/index.scss">
+    </head>
     <body>
         <div id="app"></div>
         <script src="./index.tsx"></script>
